issue #33: fixed executing unit tests via maven